<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vitamin Clicker</string>
    <string name="btn_click_label">COUNT</string>
	<string name="btn_statistics_label">Statistics</string>
	<string name="day">Day</string>
	<string name="vitamin_counts">Vitamin count</string>
	<string name="menu_info">Info</string>
	<string name="info">Info</string>
	<string name="about">About</string>
	<string name="developer">Developer : </string>
	<string name="version">Version : </string>
	<string name="source_code">Source code : </string>
	<string name="githubLink"><a href="https://github.com/mariusneo/vitaminclicker">GitHub</a></string>
</resources>
