<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bluemamba"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/aboutTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10.0dip"
            android:text="@string/info" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10.0dip"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10.0dip"
        android:text="Android application that counts the number of fruits &amp; vegetables that you eat every day.\nIt is recommended to consume five portions per day (one handfull).\n\nDon&apos;t count the calorier, but the vitamins!"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bluemamba"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10.0dip"
            android:text="@string/about" />
    </LinearLayout>

    <TableLayout       
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:padding="10dip">

        <!-- 2 columns -->

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left">

            <TextView
                android:id="@+id/textViewDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer" />

            <TextView
                android:id="@+id/textViewDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:text="Marius Grama" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left" >

            <TextView
                android:id="@+id/textViewVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version" />

            <TextView
                android:id="@+id/textViewVersionNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:text="1.0" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left" >

            <TextView
                android:id="@+id/textViewVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source_code" />

            <TextView
                android:id="@+id/gitHubLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:text="@string/githubLink" />
        </TableRow>
    </TableLayout>

</LinearLayout>